MET-7084: Provider references are only dereferenced if they are Europ… (#780)
* MET-7084: Provider references are only dereferenced if they are Europeana links, otherwise only coreferenced (and perhaps replaced).

* MET-7084: Review comments.